--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -30,6 +30,10 @@ h6 {
     letter-spacing: 1px;
 }
 
+ul {
+    text-align: left;
+}
+
 p {
     margin: 0 0 25px;
     font-size: 18px;
@@ -147,7 +151,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/vintage-books.jpg) no-repeat bottom center scroll;
+    background: url(../img/background-books.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -281,7 +285,8 @@ a:focus {
 
 @media(min-width:767px) {
     .content-section {
-        padding-top: 250px;
+        padding-top: 50px;
+        padding-bottom: 50px;
     }
 
     .download-section {
@@ -295,7 +300,8 @@ a:focus {
 }
 
 .btn {
-    border-radius: 0;
+    border-radius: 6;
+    margin-left: 5px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
