working on star ratings

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -41,6 +41,11 @@ li {
     margin-top: 5px;
 }
 
+em {
+    font-size: 20px;
+    color: #42dca3;
+}
+
 input {
     border-radius: 6px;
     height: 30px;
