--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -41,6 +41,7 @@ li {
     margin-top: 5px;
 }
 
+
 em {
     font-size: 20px;
     color: #42dca3;
@@ -401,4 +402,24 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: rgba(255,255,255,.2);
+}
+
+.rating {
+    color: #a9a9a9;
+    margin: 0;
+    padding: 0;
+}
+ul.rating {
+    display: inline-block;
+}
+.rating li {
+    list-style-type: none;
+    display: inline-block;
+    padding: 1px;
+    text-align: center;
+    font-weight: bold;
+    cursor: pointer;
+}
+.rating .filled {
+    color: red;
 }
